--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente Desarrollo
-configuracion.autor.nombre=Hugo
-configuracion.autor.email=hugo_larosa@hotmail.com
+configuracion.texto=Configurando entorno Desarrollo ...
+configuracion.autor.nombre=Jhon
+configuracion.autor.email=john@correo.com
